# tegaconsults-cloud-digital-doctors-assistant

./: .env.example  .gitignore  .replit  ACCOUNTING_BILLING_SYSTEM_DESIGN.md  AI_AGENT_SETUP_PROMPT.md  AI_FEATURES_SUMMARY.md  API_ROUTE_FIX.md  BILLING_IMPLEMENTATION_STATUS.md  BILLING_QUICK_START.md  BILLING_ROLES_UPDATE.md  CORS_FIX_COMPLETE.md  DATABASE_MIGRATION_GUIDE.md  DEPARTMENT_TEAM_DISPLAY_FIX.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFICATION.md  FACIAL_RECOGNITION_SUSPENDED.md  FINAL_PUSH_SUMMARY.md  GITHUB_PUSH_GUIDE.md  GITHUB_PUSH_SUMMARY.md  LOCAL_DEVELOPMENT_SETUP.md  MEDICAL_RECORDS_SYSTEM.md  MIGRATION_COMPLETE.md  ML_INTEGRATION_GUIDE.md  PATIENTS_SEEDED.md  PATIENT_FILES_AI_SUMMARY.md  PATIENT_TIMELINE_FEATURE.md  PHARMACY_INVENTORY_SYSTEM.md  POSTGRES_MIGRATION_GUIDE.md  PYTHON_BACKEND_MIGRATION.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  RENDER_DEPLOYMENT.md  SINGLE_SERVICE_DEPLOYMENT.md  STATIC_DEPLOYMENT_FIX.md  SUBSCRIPTION_SYSTEM.md  TEST_DR_CHIJI_FIXES.md  TIMELINE_IMPLEMENTATION_SUMMARY.md  USER_CREDENTIALS.txt  VERCEL_RENDER_DEPLOYMENT.md  (+34 more)
DDA-Implementation/: 00-START-HERE.txt  INDEX.md  QUICK_START.md  README.md
DDA-Implementation/backend/: advanced-llm-service.ts  ml-training-service.ts  routes.ts  (+3 more)
client/: .env.production  index.html
migrations/: 0000_mature_whirlwind.sql
server/: app.ts  data-preprocessing.ts  db.ts  department-automation-service.ts  ml-models.ts  ml-service.ts  openai-service.ts  production-storage.ts  routes.ts  storage.ts
server_py/: __init__.py  config.py  main.py  requirements.txt
shared/: schema.ts
(+128 files in other folders)
